tests/neg/semantic_system_env_null_arity.baa
// EXPECT: عدد معاملات 'متغير_بيئة' غير صحيح

صحيح الرئيسية() {
    نص قيمة = متغير_بيئة(عدم, "PATH").
    إرجع ٠.
}
